--- a/index.html
+++ b/index.html
@@ -26,14 +26,12 @@
         </div>
         <div id="contentnobars">
           <h2>Welcome</h2>
-          <p>I am an assistant research professor with the Department of Statistics at Pennsylvania State University's Eberly College of Science. My research passion lies within the realm of Statistics Education. This field is relatively young and is full of opportunities for understanding how individuals think about concepts in Statistics. My
-            dissertation work focused on students' understanding of stochastic processes as they develop a conception of a stochastic variable's distribution. </p>
+          <p>I am an assistant research professor with the Department of Statistics at Pennsylvania State University's Eberly College of Science. My research passion lies within the realm of Stochastics Education. This field is relatively young and is full of opportunities for understanding how individuals think about concepts in Statistics. My dissertation work focused on students' understanding of stochastic processes as they develop a conception of a stochastic variable's distribution. </p>
           <p>Prior to joining Penn State, I worked at the University of Northern Colorado as a Visiting Assistant Professor of Mathematics and as an Instructor for Arizona State University.</p>
           <br />
-          <h2>What is Statistics Education?</h2>
-          <p>Statistics Education is the research field that is concerned with investigating, describing, and modeling how individuals think about and learn ideas in statistics. Our research products often inform the development of lessons, curriculum materials such as texts, videos, and applets, as well as contributing the growing knowledge base for how educators can support their students in developing particular meanings.</p>
-          <p>Statistics Education is not like Environmental Statistics, Biostatistics, Astrostatistics, Statistical Physics, or Geostatistics (to name a few). These fields are primarily concerned with the development and application of statistical methods within their respective disciplines. The education analog to these is Educational Statistics. While Statistics Education researchers can certainly use statistical methods, many of the most powerful studies involving using qualitative methods. This is one of the key ways that sets Statistics Education apart from these others fields.</p>
-          <p>Statistics Education is a relatively young field; I often point to the 2008 article "Introducing the Emerging Discipline of Statistics Education" by Ben-Zvi and Garfield as a key moment. While there had been significant work towards building the field prior to their article (some going back to the 1940s), Ben-Zvi and Garfield brought the field to light. Statistics Education grew out of two places: a group of statisticians trying to improve the teaching of statistics and mathematics education researchers who were interested in students' statistical thinking. Since Ben-Zvi and Garfield's article, there are increasing numbers of statisticians getting involved in Statistics Education research projects as well as calls to get more Science Education and Computer Science Education involved. In a way, Statistics Education is a multidisciplinary field.</p>
+          <h2>What is Stochastics Education?</h2>
+          <p>Stochastics Education is the research field that is concerned with investigating, describing, and modeling how individuals think about and learn ideas in Statistics, Probability and Data Science. Our research products often inform the development of lessons, curricular materials such as texts, videos, and applets, as well as contributing the growing knowledge base for how educators can support their students in developing particular meanings. While the use of statistics and quantitative methods can happen within Stochastics Education research, many of the most powerful studies involving using qualitative methods.</p>
+          <p>Some colleagues and I have recently (2024) introduced the term Stochastics Education to replace the terms "Statistics Education" and "Statistics and Data Science Education". We felt that neither of those terms captured probability and other aspects of [applied] mathematics and computer science. Rather than adding adding more terms, we saught to simplify and lean into the unifying idea of stochasticity. I feel that this name change also preserves the historical tendency of the field to be truly multi-interdisciplinary.</p>
           <br />
           <h2>Curriculum Vitae</h2>
           <h3>Current Employment: Pennsylvania State University</h3>
@@ -80,7 +78,7 @@
                 src="1_Images/psu_mark.jpg"
                 class="noborder"
                 style="width: 318px; height: 85px;" /></a><br />
-            © 2021 Neil Hatfield <br />
+            © 2024 Neil J. Hatfield <br />
           </div>
         </div>
       </div>
