--- a/teaching.html
+++ b/teaching.html
@@ -33,7 +33,7 @@
         <div id="contentnobars">
           <h2 id="current">Current Courses-Fall 2024</h2>
             <ul>
-              <li>PSU 16: First-Year Seminar-Statistics/Data Science (ECoS). Check out the PSU 16.550 Course FAQ (syllabus).</li>
+              <li>PSU 16: First-Year Seminar-Statistics/Data Science (ECoS). Check out the <a href="psu16syllabus.html" class="bodylinks">PSU 16.550 Course FAQ (syllabus)</a>.</li>
               <li>STAT 184: Introduction to R. Check out the <a href="stat184syllabus.html" class="bodylinks">STAT 184 Course FAQ (syllabus)</a>.</li>
               <li>STAT 461: Analysis of Variance. Check out the <a href="stat461syllabus.html" class="bodylinks">STAT 461 Course FAQ (syllabus)</a>.</li>
               <li>STAT 592: Teaching Statistics. Check out the <a href="stat592syllabus.html" class="bodylinks">Stat 592 Course FAQ (syllabus)</a>.</li>
