--- a/psu16syllabus.html
+++ b/psu16syllabus.html
@@ -257,7 +257,7 @@
                     <tr>
                       <td>3</td>
                       <td>Monday, September 9, 2024</td>
-                      <td>Meet the Department Pizza Party <br/> <mark>Class will meeting in Thomas 327</mark></td>
+                      <td>Meet the Department Pizza Party <br/> <mark>Class will meet in Thomas 327</mark></td>
                     </tr>
                     <tr>
                       <td>4</td>
