--- a/stat592syllabus.html
+++ b/stat592syllabus.html
@@ -267,22 +267,22 @@
                     <tr>
                       <td>6</td>
                       <td>Thursday, October 3, 2024</td>
-                      <td>DNR Framework</td>
+                      <td>Statistics Learning Environments</td>
                     </tr>
                     <tr>
                       <td>7</td>
                       <td>Thursday, October 10, 2024</td>
-                      <td>Statistics Learning Environments</td>
+                      <td>Intro to Models of Teaching</td>
                     </tr>
                     <tr>
                       <td>8</td>
                       <td>Thursday, October 17, 2024</td>
-                      <td>Models of Teaching</td>
+                      <td>Diving Deeper into Inquiry-Based Learning</td>
                     </tr>
                     <tr>
                       <td>9</td>
                       <td>Thursday, October 24, 2024</td>
-                      <td>Models of Teaching</td>
+                      <td>The DNR Framework</td>
                     </tr>
                     <tr>
                       <td>10</td>
