--- a/stat592syllabus.html
+++ b/stat592syllabus.html
@@ -130,7 +130,7 @@
                 </p>
                 <h4>Attendance</h4>
                 <p>
-                    You will need to attend each class session baring illness, participation in a Univeristy sanctioned event, or religious observance/practice. Please let me know if you are going to be absent. Abscences can jeopardize your final course grade.
+                    You will need to attend each class session baring illness, participation in a Univeristy sanctioned event, religious observance/practice, or other legitimate circumstances (e.g., governmental elections). Please let me know if you are going to be absent. Abscences can jeopardize your final course grade.
                 </p>
                 <p>
                     Students who are absent three or more times throughout the semester may receive a failing grade for the course. (Note: Three abscences is equivalent to missing 20% of the course.)
@@ -141,7 +141,7 @@
                 </p>
                 <h3>Eberly College of Science Code of Mutual Respect and Cooperation</h3>
                 <p>
-                    Within the Eberly College of Science we have a set of 12 principles meant to capture and convey the values we hope that all members of our community will choose to embody and make the college a rewarding community for all. Please take a moment to look through the <a class="bodylinks" target="_blank" rel="noopener"
+                    Within the Eberly College of Science we have a set of 12 principles meant to capture and convey the values we hope that all members of our community will choose to embody and make the college a rewarding community for all. Please take a moment to look through <a class="bodylinks" target="_blank" rel="noopener"
                     href="https://science.psu.edu/climate-and-diversity/code-mutual-respect-and-cooperation">The
                     Eberly College of Science Code of Mutual Respect and Cooperation</a>.
                 </p>
@@ -356,12 +356,12 @@
                 </p>
                 <h3 id="bias">Educational Equity and Reporting Bias</h3>
                 <p>
-                    Penn State University has adopted a <a class="bodylinks" target="_blank" rel="noopener" href="http://equity.psu.edu/reportbias/reports/protocol-for-responding-to-bias-motivated-incidents">Protocol for Responding to Bias Motivated Incidents</a> that is grounded in the policy that the "University is committed to creating an educational environment which is free from intolerance directed toward individuals or groups and strives to create and maintain an environment that fosters respect for others." That policy is embedded within an institution traditionally committed to <a class="bodylinks" target="_blank" rel="noopener" href="https://guru.psu.edu/policies/OHR/hr64.html">academic freedom</a>.
+                    Penn State University has adopted a <a class="bodylinks" target="_blank" rel="noopener" href="https://equity.psu.edu/report-bias">Protocol for Responding to Bias Motivated Incidents</a> that is grounded in the policy that the "University is committed to creating an educational environment which is free from intolerance directed toward individuals or groups and strives to create and maintain an environment that fosters respect for others." That policy is embedded within an institution traditionally committed to <a class="bodylinks" target="_blank" rel="noopener" href="https://policy.psu.edu/policies/ac64">academic freedom</a>.
                 </p>
                 <p>
                     Bias motivated incidents include conduct that is defined in University <a class="bodylinks" target="_blank" rel="noopener" href="https://guru.psu.edu/policies/ad91.html">Policy AD 91: Discrimination and Harassment, and Related Inappropriate Conduct</a>. Students, faculty, or staff who experience or witness a possible bias motivated incident are urged to report the incident immediately by doing one of the following:</p>
                 <ul>
-                    <li>Submit a report via the <a class="bodylinks" target="_blank" rel="noopener" href="http://equity.psu.edu/reportbias/">Report
+                    <li>Submit a report via the <a class="bodylinks" target="_blank" rel="noopener" href="https://equity.psu.edu/report-bias">Report
                             Bias webpage</a></li>
                     <li>Contact one of the following offices:
                         <ul>
@@ -385,7 +385,7 @@
                     If you currently have academic accommodations, please make sure to talk with me as soon as possible so that we can get everything in place.
                 </p>
                 <p>
-                    If you've had academic accommodations in the past but haven't registered with the Student Disability Resources office, I encourage you to do so. Having the accommodations does not mean that you have to use them but they do provide you with an additional support system. To start the process, please reach out through the <a href="http://equity.psu.edu/sdr/campus-contacts" target="_blank"  class="bodylinks">Student Disability Resources (SDR) website</a>, which provides contact informaiton for every Penn State
+                    If you've had academic accommodations in the past but haven't registered with the Student Disability Resources office, I encourage you to do so. Having the accommodations does not mean that you have to use them but they do provide you with an additional support system. To start the process, please reach out through the <a href="https://equity.psu.edu/offices/student-disability-resources" target="_blank"  class="bodylinks">Student Disability Resources (SDR) website</a>, which provides contact informaiton for every Penn State
                     campus.
                 </p>
                 <h3 id="cps">Counseling and Psychological Services</h3>
