--- a/psu16syllabus.html
+++ b/psu16syllabus.html
@@ -141,7 +141,7 @@
                 </p>
                 <h4>Participation</h4>
                 <p>
-                    Given that this course is primarily discussion based, your participation is absolutely necessary. <mark>The class will develop a working-definition of participation.</mark>
+                    Given that this course is primarily discussion based, your participation is absolutely necessary. <mark>The class will develop a working definition of participation.</mark>
                 </p>
                 <h3>Eberly College of Science Code of Mutual Respect and Cooperation</h3>
                 <p>
