--- a/stat592syllabus.html
+++ b/stat592syllabus.html
@@ -350,9 +350,7 @@
                 </p>
                 <p>
                     Visit <a class="bodylinks" target="_blank" rel="noopener"
-                        href="https://studentaffairs.psu.edu/campus-community-diversity/lgbtq-community/transgender-and-non-binary-penn-state">Trans
-                        and Non-Binary Penn State</a>
-                    to learn more.
+                        href="https://studentaffairs.psu.edu/campus-community-diversity/lgbtq-community/transgender-and-non-binary-penn-state">Trans and Non-Binary Penn State</a> to learn more.
                 </p>
                 <h3 id="bias">Educational Equity and Reporting Bias</h3>
                 <p>
