PSU16 and Stat592
Formatting Tweaks

--- a/stat592syllabus.html
+++ b/stat592syllabus.html
@@ -141,9 +141,7 @@
                 </p>
                 <h3>Eberly College of Science Code of Mutual Respect and Cooperation</h3>
                 <p>
-                    Within the Eberly College of Science we have a set of 12 principles meant to capture and convey the values we hope that all members of our community will choose to embody and make the college a rewarding community for all. Please take a moment to look through <a class="bodylinks" target="_blank" rel="noopener"
-                    href="https://science.psu.edu/climate-and-diversity/code-mutual-respect-and-cooperation">The
-                    Eberly College of Science Code of Mutual Respect and Cooperation</a>.
+                    Within the Eberly College of Science we have a set of 12 principles meant to capture and convey the values we hope that all members of our community will choose to embody and make the college a rewarding community for all. Please take a moment to look through <a class="bodylinks" target="_blank" rel="noopener" href="https://science.psu.edu/climate-and-diversity/code-mutual-respect-and-cooperation">The Eberly College of Science Code of Mutual Respect and Cooperation</a>.
                 </p>
                 <p style="text-align: right;"><a href="#topLinks" class="bodylinks">Return to top</a></p>
                 <h2 id="assignments">Assignments and Assessment</h2>
@@ -359,8 +357,7 @@
                 <p>
                     Bias motivated incidents include conduct that is defined in University <a class="bodylinks" target="_blank" rel="noopener" href="https://guru.psu.edu/policies/ad91.html">Policy AD 91: Discrimination and Harassment, and Related Inappropriate Conduct</a>. Students, faculty, or staff who experience or witness a possible bias motivated incident are urged to report the incident immediately by doing one of the following:</p>
                 <ul>
-                    <li>Submit a report via the <a class="bodylinks" target="_blank" rel="noopener" href="https://equity.psu.edu/report-bias">Report
-                            Bias webpage</a></li>
+                    <li>Submit a report via the <a class="bodylinks" target="_blank" rel="noopener" href="https://equity.psu.edu/report-bias">Report Bias webpage</a></li>
                     <li>Contact one of the following offices:
                         <ul>
                             <li>University Police Services, University Park: 814-863-1111</li>
