--- a/psu16syllabus.html
+++ b/psu16syllabus.html
@@ -135,7 +135,8 @@
                 </p>
                 <h4>Attendance</h4>
                 <p>
-                    Attending class is an expectation of the University has of all students for all courses, regardless of modality (in-person, hybrid, or online). Further, attending class is vital to your learning. Therefore, you will need to attend each class session baring illness, participation in a Univeristy sanctioned event, religious observance/practice, or other legitimate circumstances (e.g., governmental elections). If you need to miss class, please let me know by sending me an email or message via Canvas.</p>
+                    Attending class is an expectation that the University has of all students for all courses, regardless of modality (in-person, hybrid, or online). Further, attending class is vital to your learning. Therefore, you will need to attend each class session baring illness, participation in a Univeristy sanctioned event, religious observance/practice, or other legitimate circumstances (e.g., governmental elections). If you need to miss class, please let me know by sending me an email or message via Canvas.
+                </p>
                 <p>
                     Given the role that attending class plays in your learning, excessive abscences can jeopardize your final course grade. We only meet once a week so each abscence adds up quickly. Just three absences equates to missing 20% of the course.
                 </p>
@@ -145,9 +146,7 @@
                 </p>
                 <h3>Eberly College of Science Code of Mutual Respect and Cooperation</h3>
                 <p>
-                    Within the Eberly College of Science we have a set of 12 principles meant to capture and convey the values we hope that all members of our community will choose to embody and make the college a rewarding community for all. Please take a moment to look through <a class="bodylinks" target="_blank" rel="noopener"
-                    href="https://science.psu.edu/climate-and-diversity/code-mutual-respect-and-cooperation">The
-                    Eberly College of Science Code of Mutual Respect and Cooperation</a>.
+                    Within the Eberly College of Science we have a set of 12 principles meant to capture and convey the values we hope that all members of our community will choose to embody and make the college a rewarding community for all. Please take a moment to look through <a class="bodylinks" target="_blank" rel="noopener" href="https://science.psu.edu/climate-and-diversity/code-mutual-respect-and-cooperation">The Eberly College of Science Code of Mutual Respect and Cooperation</a>.
                 </p>
                 <p style="text-align: right;"><a href="#topLinks" class="bodylinks">Return to top</a></p>
                 <h2 id="assignments">Assignments and Assessment</h2>
@@ -365,8 +364,7 @@
                 <p>
                     Bias motivated incidents include conduct that is defined in University <a class="bodylinks" target="_blank" rel="noopener" href="https://guru.psu.edu/policies/ad91.html">Policy AD 91: Discrimination and Harassment, and Related Inappropriate Conduct</a>. Students, faculty, or staff who experience or witness a possible bias motivated incident are urged to report the incident immediately by doing one of the following:</p>
                 <ul>
-                    <li>Submit a report via the <a class="bodylinks" target="_blank" rel="noopener" href="https://equity.psu.edu/report-bias">Report
-                            Bias webpage</a></li>
+                    <li>Submit a report via the <a class="bodylinks" target="_blank" rel="noopener" href="https://equity.psu.edu/report-bias">Reports Bias webpage</a></li>
                     <li>Contact one of the following offices:
                         <ul>
                             <li>University Police Services, University Park: 814-863-1111</li>
