Updates To FAQs
Incorporating student decisions for PSU 16 and Stat 592

--- a/psu16syllabus.html
+++ b/psu16syllabus.html
@@ -29,7 +29,7 @@
                 <p>
                     This page serves as the syllabus for PSU 16, Section 550: First-Year Seminar-Statistics/Data Science (ECoS) course in Fall 2024. Feel free to scroll through the page and/or use the navigation links I've provided. If you find something that doesn't work, please let me know so I can fix it.
                 </p>
-                <p>Last Updated: 8/16/2024</p>
+                <p>Last Updated: 8/31/2024</p>
                 <h2 id="topLinks">Quick Links</h2>
                 <ul style="column-count: 3; -webkit-column-count: 3; -moz-column-count: 3; -o-column-count: 3">
                     <li><a href="#courseDescp" class="bodylinks">Course Description</a></li>
@@ -125,10 +125,32 @@
                         <strong>Respect the Learning Process of Others:</strong> Allow people the opportunity to think, reflect, and construct their understandings. When assisting your students or your peers, pose  questions to help them construct meaning rather than show them how to get an answer.
                     </li>
                 </ol>
-                <h3>Student Responsibilities</h3>
-                <p><mark>The class will develop a list of student responsibilities.</mark></p>
-                <h3>Teacher Responsibilities</h3>
-                <p><mark>The class will develop a list of teacher responsibilities.</mark></p>
+                <h3>Updated: Student Responsibilities</h3>
+                <p>Here is what the Fall 2024 class came up with as student responsibilities.</p>
+                <ul style="column-count: 3; -webkit-column-count: 3; -moz-column-count: 3; -o-column-count: 3">
+                    <li>Show up/attend class</li>
+                    <li>Respect everyone</li>
+                    <li>Take class seriously</li>
+                    <li>Follow the Shared Responsibilities</li>
+                    <li>Engage in the class</li>
+                    <li>Converse (as appropriate) during class</li>
+                    <li>Participate in discussions and activities</li>
+                    <li>Show curiosity</li>
+                    <li>Show willingness to learn</li>
+                    <li>Be part of the class community</li>
+                </ul>
+                <h3>Updated: Teacher Responsibilities</h3>
+                <p>Here are the teacher responsibilities that Fall 2024 class generated.</p>
+                <ul style="column-count: 2; -webkit-column-count: 2; -moz-column-count: 2; -o-column-count: 2">
+                    <li>Create a welcoming environment</li>
+                    <li>Lead discussions</li>
+                    <li>Communicate</li>
+                    <li>Respect others</li>
+                    <li>Be flexible</li>
+                    <li>Allow room for students to share their thoughts</li>
+                    <li>Be patient</li>
+                    <li>Be understanding</li>
+                </ul>
                 <h3>Attendance and Participation Policy</h3>
                 <p>
                     Attendance and participation are vitally important for our class community. Attending each class session is an important part of becoming a professional member of our community. However, attendance alone will not guarantee that each person will get the most they can out of the course. This is where your participation comes into play. I will do what I can to provide a variety of ways for people to participate.
@@ -140,10 +162,19 @@
                 <p>
                     Given the role that attending class plays in your learning, excessive abscences can jeopardize your final course grade. We only meet once a week so each abscence adds up quickly. Just three absences equates to missing 20% of the course.
                 </p>
-                <h4>Participation</h4>
+                <h4>Updated: Participation</h4>
                 <p>
-                    Given that this course is primarily discussion based, your participation is absolutely necessary. <mark>The class will develop a working definition of participation.</mark>
+                    Given that this course is primarily discussion based, your participation is absolutely necessary. Here is what the Fall 2024 class came up with as participating entails.
                 </p>
+                <ul style="column-count: 2; -webkit-column-count: 2; -moz-column-count: 2; -o-column-count: 2">
+                    <li>Attending class</li>
+                    <li>Raising your hands</li>
+                    <li>Engaging in small group discussions</li>
+                    <li>Doing your part/share of the work in groups</li>
+                    <li>Be attenative</li>
+                    <li>Speak up, share your thoughts</li>
+                    <li>Use active listening</li>
+                </ul>
                 <h3>Eberly College of Science Code of Mutual Respect and Cooperation</h3>
                 <p>
                     Within the Eberly College of Science we have a set of 12 principles meant to capture and convey the values we hope that all members of our community will choose to embody and make the college a rewarding community for all. Please take a moment to look through <a class="bodylinks" target="_blank" rel="noopener" href="https://science.psu.edu/climate-and-diversity/code-mutual-respect-and-cooperation">The Eberly College of Science Code of Mutual Respect and Cooperation</a>.
@@ -183,8 +214,8 @@
                 <p>
                     This also means that we need to be able to show and give grace to each other. We must all acknowledge that sometimes unexpected things occur and can cause problems. To this end, we need to keep open lines of communication. Reach out to me and keep me informed of external pressures.
                 </p>
-                <h3>Examination Policy</h3>
-                <p><mark>The class will have an opportunity to decide on whether there will be any tests and/or a final exam for this course</mark>.</p>
+                <h3>Updated: Examination Policy</h3>
+                <p>The Fall 2024 class has voted to not have a Final Exam nor any tests.</p>
                 <h3>Grading Policy</h3>
                 <p>
                     While there are different types of assignments, they are all equally important to your growth. Thus, there no category weights.
@@ -450,7 +481,7 @@
                     Part of learning involves running into situations where you don't instantly have a solution. Rather, you have to think about the problem, try a few things, and then pieces fall into place. You do not have to engage in such struggles alone. Getting help is a great way to help you engage  in <em>productive struggle</em> that leads to better learning. However, not all sources of help will actually support your learning and growth. Here are my suggestions for places to seek help.
                 </p>
                 <ol>
-                    <li>Check your course notes and class recordings.</li>
+                    <li>Check your course notes.</li>
                     <li>Talk with your classmates.</li>
                     <li>Make use of Student Hours.</li>
                     <li>Email your instructor.</li>
@@ -465,6 +496,33 @@
                 <p>
                     An important part aspect of this course is to help you develop foundational ways of thinking about teaching so that you can create your own lessons. Using tools such as generative AI to design, create, prepare lessons plans for you not only cheats yourself of an invaluable learning opportunity, but it also cheats your students. Therefore, unless explicit permission is given for a particular assignment, the entire class community (the instructor, the students, TAs, etc.) should actively refrain from using generative AI tools. When such use is explicitly authorized, that work should be properly documented. Direct usage of output from chatbots should be treated much like a direct quotation; derivations of such output should be treated as paraphrased text.
                 </p>
+                <h4>Updated: Generative AI Policy</h4>
+                <p>Based upon the input I received from the class, I have put in place the following policy around using generative AI tools in this course (PSU 16, Sec. 550).</p>
+                <dl>
+                    <dt>Allowed Usages</dt>
+                    <dd>
+                        We (i.e., members of the class community) <em>may</em> use a spelling/grammar focused genAI tool such as Grammarly to offer assistance in addressing spelling and grammar errors. The tool must be explicitly built for such usage. Important to note here is that the re-writing of your work beyond fixing spelling/grammar is NOT allowed.
+                    </dd>
+                    <dt>Potentially Allowed Usage--Ask for permission first</dt>
+                    <dd>
+                        This is a a case-by-case catchall. There are certain skills (e.g., creating a schedule, writing a challenging email, writing a letter) that we need to practice developing without the assistance of a genAI tool. For things of this nature and related to PSU 16, you need to ask first.
+                    </dd>
+                    <dt>Disallowed Usages</dt>
+                    <dd>
+                        We <em>shall not</em> use genAI tools to conduct research nor summarize any articles we are to read for the class.
+                    </dd>
+                    <dd>
+                        We <em>shall not</em> use genAI as a substitute for coming up with our ideas nor as a replacement for doing our own brainstorming.
+                    </dd>
+                    <dd>
+                        We <em>shall not</em> use genAI to write any responses for us to any questions posed as part of any course assignment or class discussion.
+                    </dd>
+                    <dt>Citation Required</dt>
+                    <dd>
+                        In the event that a genAI tool is allowed (other than instances of spelling/grammar checks), we <em>shall</em> dutifully cite 1) which genAI tool(s) was/were used (including version information), 2) the exact prompt(s) we used along with any subsequent prompts, and 3) the exact response we received from the tool. This information must be provided as an appendix to the submitted work.
+                    </dd>
+                </dl>
+                <p>Any use case of genAI not explictily mention should be handled under the philosophy of "Ask First". Using genAI tools during the course in ways that are inconsistent with this policy shall be violations of Academic Integrity.</p>
                 <h3>Consequences</h3>
                 <p>
                     Any instances of academic dishonesty will be pursued under the <a class="bodylinks" target="_blank" rel="noopener" href="https://science.psu.edu/current-students/integrity">University and Eberly College of Science regulations</a> concerning academic integrity. For more information on academic integrity, see <a class="bodylinks" target="_blank" rel="noopener" href="http://tlt.its.psu.edu/suggestions/cyberplag/cyberplagstudent.html">Penn State's statement on plagiarism and academic dishonesty</a>.
