--- a/stat592syllabus.html
+++ b/stat592syllabus.html
@@ -29,7 +29,7 @@
                 <p>
                     This page serves as the syllabus for the STAT 592: Teaching Statistics course in Fall 2024. Feel free to scroll through the page and/or use the navigation links I've provided. If you find something that doesn't work, please let me know so I can fix it.
                 </p>
-                <p>Last Updated: 8/15/2024</p>
+                <p>Last Updated: 8/31/2024</p>
                 <h2 id="topLinks">Quick Links</h2>
                 <ul style="column-count: 3; -webkit-column-count: 3; -moz-column-count: 3; -o-column-count: 3">
                     <li><a href="#courseDescp" class="bodylinks">Course Description</a></li>
@@ -119,11 +119,34 @@
                         <strong>Respect the Learning Process of Others:</strong> Allow people the opportunity to think, reflect, and construct their understandings. When assisting your students or your peers, pose  questions to help them construct meaning rather than show them how to get an answer.
                     </li>
                 </ol>
-                <h3>Student Responsibilities</h3>
-                <p><mark>The class will develop a list of student responsibilities.</mark></p>
-                <p>As determined by the class, student responsibilities include</p>
-                <h3>Teacher Responsibilities</h3>
-                <p><mark>The class will develop a list of teacher responsibilities.</mark></p>
+                <h3>Updated: Student Responsibilities</h3>
+                <p>The Fall 2024 class came up with the following responsibilities for students enrolled in the class.</p>
+                <ul style="column-count: 3; -webkit-column-count: 3; -moz-column-count: 3; -o-column-count: 3;">
+                    <li>Avoid using language that trivializes challenges others may have (e.g., "clearly", "obviously", etc.)</li>
+                    <li>Provide support for one another</li>
+                    <li>Be active in class</li>
+                    <li>Stay engaged and attentative</li>
+                    <li>Respect diverse opinions</li>
+                    <li>Actively participate</li>
+                    <li>Be mindful of the space you take; let others have a turn</li>
+                    <li>Be prepared for each class</li>
+                    <li>(Adequately) Contribute in groups</li>
+                    <li>Be respectful</li>
+                </ul>
+                <h3>Updated: Teacher Responsibilities</h3>
+                <p>Here's what the Fall 2024 class generated as teacher responsibilities.</p>
+                <ul style="column-count: 3; -webkit-column-count: 3; -moz-column-count: 3; -o-column-count: 3;">
+                    <li>Avoid using language that trivializes challenges others may have (e.g., "clearly", "obviously", etc.)</li>
+                    <li>Be aware of students' total workload</li>
+                    <li>Keep topics relavent to students</li>
+                    <li>Be tolerant of mistakes</li>
+                    <li>Help students improve their expression of ideas (communication)</li>
+                    <li>Keep a good/positive attitude</li>
+                    <li>Help point out cultural aspects as they relate to the course and teaching</li>
+                    <li>Communicate expectations and deadlines</li>
+                    <li>Make sure that students have time to prepare</li>
+                </ul>
+                <p>Additionally, there were a few suggestions that were more on the fun side: bring baked goods, provide recipes, and give students extra points for wearing ties.</p>
                 <h3>Attendance and Participation Policy</h3>
                 <p>
                     Attendance and participation are vitally important for our class community. Attending each class session is an important part of becoming a professional member of our community. However, attendance alone will not guarantee that each person will get the most they can out of the course. This is where your participation comes into play. I will do what I can to provide a variety of ways for people to participate.
@@ -135,10 +158,22 @@
                 <p>
                     Students who are absent three or more times throughout the semester may receive a failing grade for the course. (Note: Three abscences is equivalent to missing 20% of the course.)
                 </p>
-                <h4>Participation</h4>
+                <h4>Updated: Participation</h4>
                 <p>
-                    Given that this course is primarily discussion based, your participation is absolutely necessary. <mark>The class will develop a working-definition of participation.</mark>
+                    Given that this course is primarily discussion based, your participation is absolutely necessary. The Fall 2024 class came up with the following as hallmarks of participating.
                 </p>
+                <ul style="column-count: 3; -webkit-column-count: 3; -moz-column-count: 3; -o-column-count: 3;">
+                    <li>Being innovative</li>
+                    <li>Having confidence</li>
+                    <li>Being respectful of others</li>
+                    <li>Engage in self-learning</li>
+                    <li>Get involved in the discussions</li>
+                    <li>Don't work on other things during class</li>
+                    <li>Ask/answer questions relavent to class</li>
+                    <li>Patiently listen to others</li>
+                    <li>Provide verbal/visual feedback</li>
+                    <li>Show up to class</li>
+                </ul>
                 <h3>Eberly College of Science Code of Mutual Respect and Cooperation</h3>
                 <p>
                     Within the Eberly College of Science we have a set of 12 principles meant to capture and convey the values we hope that all members of our community will choose to embody and make the college a rewarding community for all. Please take a moment to look through <a class="bodylinks" target="_blank" rel="noopener" href="https://science.psu.edu/climate-and-diversity/code-mutual-respect-and-cooperation">The Eberly College of Science Code of Mutual Respect and Cooperation</a>.
@@ -178,8 +213,8 @@
                 <p>
                     This also means that we need to be able to show and give grace to each other. We must all acknowledge that sometimes unexpected things occur and can cause problems. To this end, we need to keep open lines of communication. Reach out to me and keep me informed of external pressures.
                 </p>
-                <h3>Examination Policy</h3>
-                <p><mark>The class will have an opportunity to decide on whether there will be any tests and/or a final exam for this course</mark>.</p>
+                <h3>Updated: Examination Policy</h3>
+                <p>The Fall 2024 class voted to not have a Final Exam nor any tests.</p>
                 <h3>Grading Policy</h3>
                 <p>
                     While there are different types of assignments, they are all equally important to your growth. Thus, there no category weights.
@@ -458,6 +493,29 @@
                 <p>
                     An important part aspect of this course is to help you develop foundational ways of thinking about teaching so that you can create your own lessons. Using tools such as generative AI to design, create, prepare lessons plans for you not only cheats yourself of an invaluable learning opportunity, but it also cheats your students. Therefore, unless explicit permission is given for a particular assignment, the entire class community (the instructor, the students, TAs, etc.) should actively refrain from using generative AI tools. When such use is explicitly authorized, that work should be properly documented. Direct usage of output from chatbots should be treated much like a direct quotation; derivations of such output should be treated as paraphrased text.
                 </p>
+                <h4>Updated: Generative AI Policy</h4>
+                <p>Based upon the input I received from the class, I have put in place the following policy around using generative AI tools for this course (Stat 592).</p>
+                <dl>
+                    <dt>Allowed Usages</dt>
+                    <dd>
+                        We (i.e., members of the class community) <em>may</em> use a spelling/grammar focused genAI tool (e.g., Grammarly) to offer assistance in addressing spelling and grammar errors. The tool must be explictily built for such usage. However, using the tool to go beyond fixing spelling/grammar mistakes and doing more substantive re-writing is NOT allowed.
+                    </dd>
+                    <dt>Disallowed Usages</dt>
+                    <dd>
+                        We <em>shall not</em> use any genAI tools to conduct literature reviews nor summarize any readings that we are to in class.
+                    </dd>
+                    <dd>
+                        We <em>shall not</em> use any genAI as a substitute for coming up with our own ideas nor as a replacement for doing our own brainstorming.
+                    </dd>
+                    <dd>
+                        We <em>shall not</em> use any genAI tools to complete any writing assignments (essays, lesson plans, etc.) that are part of the class.
+                    </dd>
+                    <dt>Citation Required</dt>
+                    <dd>
+                        In the event that a genAI tool is allowed (other than for spelling/grammar checks), we <em>shall</em> dutifully cite 1) which genAI tool(s) we used used (including version information), 2) the exact prompt(s) we used along with any subsequent prompts, and 3) the exact response we received from the tool. This information must be provided as an appendix to the submitted work.
+                    </dd>
+                </dl>
+                <p>Any use case of genAI not explicitly mentioned should be handled under the philosophy of "Ask First". Using genAI tools during the course in ways that are inconsistent with this policy shall be violations of Academic Integrity.</p>
                 <h3>Consequences</h3>
                 <p>
                     Any instances of academic dishonesty will be pursued under the <a class="bodylinks" target="_blank" rel="noopener" href="https://science.psu.edu/current-students/integrity">University and Eberly College of Science regulations</a> concerning academic integrity. For more information on academic integrity, see <a class="bodylinks" target="_blank" rel="noopener" href="http://tlt.its.psu.edu/suggestions/cyberplag/cyberplagstudent.html">Penn State's statement on plagiarism and academic dishonesty</a>.
