--- a/stat461syllabus.html
+++ b/stat461syllabus.html
@@ -70,17 +70,15 @@
                 </div>
                 <div class="wrap-collabsible">
                     <input id="faq68" class="toggle" type="checkbox">
-                    <label for="faq68" class="lbl-toggle" tabindex="0">When/Where are Student Hours?</label>
+                    <label for="faq68" class="lbl-toggle" tabindex="0">Updated: When/Where are Student Hours?</label>
                     <div class="collapsible-content">
                         <div class="content-inner">
-                            <p>Student Hours for Fall 2024 will be held in Thomas 425(A) on</p>
-                            <ul>
-                                <li><mark>TBD</mark></li>
-                                <li>Please complete the posted Student Hours Poll to help find good times.</li>
-                            </ul>
+                            <p>
+                                Student Hours for Fall 2024 will be held in Thomas 425A on Wednesdays, Thursdays, and Fridays (WRF) from ~4:30p, to 6:00pm.
+                            </p>
                             <p>
                                 As always, you can email me to set up additional times. <br />
-                                In the event that I need to cancel or move Student Hours, I will post an announcemnt.
+                                In the event that I need to cancel or move Student Hours, I will make an announcemnt.
                             </p>
                         </div>
                     </div>
